--- a/package.json
+++ b/package.json
@@ -1,39 +1,25 @@
 {
-  "name": "react_course_js_ru_08_06_17",
+  "name": "react-starter",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --hot --inline",
-    "build": "webpack"
-  },
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/romabelka/js_ru_08_06_17"
+    "dev": "webpack-dev-server --inline --hot --mode development --open",
+    "build": "webpack --mode production"
   },
   "author": "",
   "license": "ISC",
-  "bugs": {
-    "url": "https://github.com/romabelka/js_ru_08_06_17"
-  },
-  "homepage": "https://github.com/romabelka/js_ru_08_06_17",
   "devDependencies": {
-    "@types/react": "^16.0.34",
-    "@types/react-dom": "^16.0.3",
-    "@types/react-router": "^4.0.20",
-    "babel-core": "^6.13.2",
-    "babel-loader": "^6.2.4",
-    "babel-preset-es2015": "^6.13.2",
-    "babel-preset-react": "^6.11.1",
-    "babel-preset-react-hmre": "^1.1.1",
-    "babel-preset-stage-0": "^6.5.0",
-    "webpack": "^2.0.0",
-    "webpack-dev-server": "^2.0.0",
-    "typescript": "2.5.2",
-    "ts-loader": "2.3.7"
+    "@types/react": "^16.4.6",
+    "@types/react-dom": "^16.0.6",
+    "@types/react-router": "^4.0.28",
+    "webpack": "^4.15.1",
+    "webpack-dev-server": "^3.1.4",
+    "typescript": "2.9.2",
+    "ts-loader": "4.4.2",
+    "react": "^16.4.1",
+    "react-dom": "16.4.1",
+    "webpack-cli": "^3.0.8"
   },
-  "dependencies": {
-    "react": "^15.5.0",
-    "react-dom": "15.6.1"
-  }
+  "dependencies": {}
 }
